scrollbar fixes

--- a/about/css.css
+++ b/about/css.css
@@ -5,7 +5,7 @@
 
 body {
     padding: 50px;
-    color: #777;
+    color: #201e1c;
     background: white;
 }
 
